--- a/ecommerce-front/src/scss/cardproduct.scss
+++ b/ecommerce-front/src/scss/cardproduct.scss
@@ -34,7 +34,7 @@
       background: black;
       border-radius: 5px;
       color: whitesmoke;
-      margin: 0px 15px;
+      margin-right: 50px;
       transition: all 0.5s;
       &:hover {
         color: #1db954;
