--- a/ecommerce-front/src/scss/cardproduct.scss
+++ b/ecommerce-front/src/scss/cardproduct.scss
@@ -17,6 +17,10 @@
         transition: all 1s;
       }
     }
+    .product-img {
+      width: 300px;
+      height: 300px;
+    }
   }
 }
 .card {
