Edit fontend admin

--- a/ecommerce-front/src/scss/productDetail.scss
+++ b/ecommerce-front/src/scss/productDetail.scss
@@ -106,7 +106,7 @@
   margin-top: 15px;
   background-color: rgba(#555a64, 0.1);
   h4 {
-    color: #008000;
+    color: red;
     font-size: 22px;
   }
   ul {
@@ -131,7 +131,7 @@
   padding: 10px;
   background-color: rgba(#555a64, 0.1);
   h4 {
-    color: #008000;
+    color: red;
     font-size: 22px;
   }
   .pic {
